test/sema/typeck/var/def-for-param-unknown.out
error: unknown identifier `foo`.
--> def-for-param-unknown.dora:1:10
 | fn a(_b: foo) {}
            ~~~
 | 
1 error found.
