test/sema/typeck/var/def-for-param-unknown.dora
fn a(_b: foo) {}
